objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>AccelerationConditions__c</fullName>
        <label>Acceleration Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AccelerationofPACEAssessment__c</fullName>
        <label>Acceleration of PACE Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActiveProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AppraisalConditions__c</fullName>
        <label>Appraisal Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AppraisalRequired__c</fullName>
        <label>Appraisal Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApprovedListofEnergyAuditors__c</fullName>
        <label>Approved List of Energy Auditors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssessmentName__c</fullName>
        <label>AssessmentName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AssessmentRequirements__c</fullName>
        <label>Assessment Requirements</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BDR__c</fullName>
        <label>BDR</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ben Dodge</fullName>
                </value>
                <value>
                    <fullName>Brandon Deno</fullName>
                </value>
                <value>
                    <fullName>Chris Robbins</fullName>
                </value>
                <value>
                    <fullName>Danny Roberts</fullName>
                </value>
                <value>
                    <fullName>Joe Euphrat</fullName>
                </value>
                <value>
                    <fullName>John Kinney</fullName>
                </value>
                <value>
                    <fullName>Josh Smith</fullName>
                </value>
                <value>
                    <fullName>Joshua Kagan</fullName>
                </value>
                <value>
                    <fullName>Leah Wiggs</fullName>
                </value>
                <value>
                    <fullName>Lucas Nagy</fullName>
                </value>
                <value>
                    <fullName>Matt Mustaro</fullName>
                </value>
                <value>
                    <fullName>Tom Neukranz</fullName>
                </value>
                <value>
                    <fullName>Will Clark</fullName>
                </value>
                <value>
                    <fullName>Woolsey McKernon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingType__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On BIll</fullName>
                </value>
                <value>
                    <fullName>Off-Bill</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BondingAuthorityName__c</fullName>
        <label>Bonding Authority Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BondingAuthorityType__c</fullName>
        <label>Bonding Authority Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BondingPermitted__c</fullName>
        <label>Bonding Permitted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CEOApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CEO Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Program_Preference__c</fullName>
        <label>CF Program Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLTVMaximum__c</fullName>
        <label>CLTV Maximum</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CapitalProviderPreApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capital Provider Pre-Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CapitalProviderRemittanceDate__c</fullName>
        <label>Capital Provider Remittance Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CapitalProviderRequirements__c</fullName>
        <label>Capital Provider Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CapitalizedInterest__c</fullName>
        <label>Capitalized Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CollectionProcedures__c</fullName>
        <label>Collection Procedures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CollectionServicingEntity__c</fullName>
        <label>Collection/Servicing Entity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ConsentRequiredByStatute__c</fullName>
        <label>Consent Required by Statute</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractorRequirements__c</fullName>
        <label>Contractor Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreditCompletionDate__c</fullName>
        <label>Credit Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreditDepartmentApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Department Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DebtServiceReservePermitted__c</fullName>
        <label>Debt Service Reserve Permitted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delay_To_Close__c</fullName>
        <label>Delay To Close</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelayforReceiptofPayment__c</fullName>
        <label>Delay for Receipt of Payment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DelinquentCollectionRateHistoric__c</fullName>
        <label>Delinquent Collection Rate (Historic)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DelinquentPenaltiesandInterest__c</fullName>
        <label>Delinquent Penalties and Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EULBaseline__c</fullName>
        <label>EUL Baseline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Term Bond</fullName>
                </value>
                <value>
                    <fullName>Weighted Average Life</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EULCalculationMethod__c</fullName>
        <label>EUL Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minimum</fullName>
                </value>
                <value>
                    <fullName>Maximum</fullName>
                </value>
                <value>
                    <fullName>Weighted Average</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Egnyte_Folder__c</fullName>
        <label>Egnyte Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EligibleImprovements__c</fullName>
        <label>Eligible Improvements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>RE</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Seismic</fullName>
                </value>
                <value>
                    <fullName>Storm Strengthening</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EligiblePropertyOwners__c</fullName>
        <label>Eligible Property Owners</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>For-Profit</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EligiblePropertyTypes__c</fullName>
        <label>Eligible Property Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EnergyAudit__c</fullName>
        <label>Energy Audit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASHRAE I</fullName>
                </value>
                <value>
                    <fullName>ASHRAE II</fullName>
                </value>
                <value>
                    <fullName>ASHRAE III</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExceptionsCFCriteria__c</fullName>
        <label>Exceptions CF Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExistingPACELegislation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing PACE Legislation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FeeSchedule__c</fullName>
        <label>Fee Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinanceCompletionDate__c</fullName>
        <label>Finance Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InterestRate__c</fullName>
        <label>Interest Rate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LenderAcknowledgement__c</fullName>
        <label>Lender Acknowledgement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiTVCalculationMethod__c</fullName>
        <label>LiTV Calculation Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LienPriority__c</fullName>
        <label>Lien Priority</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Property Taxes - Senior</fullName>
                </value>
                <value>
                    <fullName>Property Taxes - Pari Passu</fullName>
                </value>
                <value>
                    <fullName>Property Taxes - Junior</fullName>
                </value>
                <value>
                    <fullName>Property Taxes - Unknown</fullName>
                </value>
                <value>
                    <fullName>1st Mortgage - Senior</fullName>
                </value>
                <value>
                    <fullName>1st Mortgage - Pari Passu</fullName>
                </value>
                <value>
                    <fullName>1st Mortgage - Junior</fullName>
                </value>
                <value>
                    <fullName>1st Mortgage - Unknown</fullName>
                </value>
                <value>
                    <fullName>Other Assessments - Senior</fullName>
                </value>
                <value>
                    <fullName>Other Assessments - Pari Passu</fullName>
                </value>
                <value>
                    <fullName>Other Assessments - Junior</fullName>
                </value>
                <value>
                    <fullName>Other Assessments - Unknown</fullName>
                </value>
                <value>
                    <fullName>HOA Fees - Senior</fullName>
                </value>
                <value>
                    <fullName>HOA Fees - Pari Passu</fullName>
                </value>
                <value>
                    <fullName>HOA Fees - Junior</fullName>
                </value>
                <value>
                    <fullName>HOA Fees - Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lien_Type__c</fullName>
        <inlineHelpText>This is how pace payments are handle with the program.</inlineHelpText>
        <label>Lien Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Special Tax</fullName>
                </value>
                <value>
                    <fullName>Special Assessment</fullName>
                </value>
                <value>
                    <fullName>Contractual Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LockoutConditions__c</fullName>
        <label>Lockout Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LockoutPermitted__c</fullName>
        <label>Lockout Permitted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxTerm__c</fullName>
        <inlineHelpText>This is the longest term permissible (in years)</inlineHelpText>
        <label>Max Term</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MaximumLiTV__c</fullName>
        <label>Maximum LiTV</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MaximumLiTVforNewConstruction__c</fullName>
        <label>Maximum LiTV for New Construction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MinimumEquity__c</fullName>
        <label>Minimum Equity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MinimumSIR__c</fullName>
        <label>Minimum SIR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultipleAssessments__c</fullName>
        <label>Multiple Assessments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Bond - Yes</fullName>
                </value>
                <value>
                    <fullName>Same Bond - No</fullName>
                </value>
                <value>
                    <fullName>Same Bond - Unknown</fullName>
                </value>
                <value>
                    <fullName>Same Parcel - Yes</fullName>
                </value>
                <value>
                    <fullName>Same Parcel - No</fullName>
                </value>
                <value>
                    <fullName>Same Parcel - Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MuniType__c</fullName>
        <label>Muni Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewConstructionPermitted__c</fullName>
        <label>New Construction Permitted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherEligibleImprovements__c</fullName>
        <label>Other Eligible Improvements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PACERefinancing__c</fullName>
        <label>PACE Refinancing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPAPermitted__c</fullName>
        <label>PPA Permitted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartialPaymentPermitted__c</fullName>
        <label>Partial Payment Permitted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParticipatingJurisdictions__c</fullName>
        <label>Participating Jurisdictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PaymentDatesSizing__c</fullName>
        <label>Payment Dates/Sizing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PaymentDelinquencyDate__c</fullName>
        <label>Payment Delinquency Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PaymentFrequency__c</fullName>
        <label>Payment Frequency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PendingLegislationComments__c</fullName>
        <label>Pending Legislation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PendingLegislation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Legislation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrepaymentApplication__c</fullName>
        <label>Prepayment Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Future Payments</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrepaymentConditions__c</fullName>
        <label>Prepayment Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PrepaymentPermitted__c</fullName>
        <label>Prepayment Permitted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriorTransactions__c</fullName>
        <label>Prior Transactions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Backfill</fullName>
                </value>
                <value>
                    <fullName>No Legislation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>No Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgramAdminName__c</fullName>
        <label>Program Admin Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramDevCompletionDate__c</fullName>
        <label>Program Dev Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgramDevelopmentApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Program Development Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProgramStrength__c</fullName>
        <label>Program Strength</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProgramWeakness__c</fullName>
        <label>Program Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RebatesIncentives__c</fullName>
        <label>Rebates/Incentives</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReceivePenalties__c</fullName>
        <label>Receive Penalties</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Approval</fullName>
                </value>
                <value>
                    <fullName>Conditional Approval</fullName>
                </value>
                <value>
                    <fullName>Approved with Reservations</fullName>
                </value>
                <value>
                    <fullName>Basic Screen</fullName>
                </value>
                <value>
                    <fullName>Not Approved/Screened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReimbursementPermitted__c</fullName>
        <label>Reimbursement Permitted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReimbursementWindow__c</fullName>
        <label>Reimbursement Window</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remedies__c</fullName>
        <label>Remedies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tax Sale</fullName>
                </value>
                <value>
                    <fullName>Foreclosure</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReserveGuarantyFund__c</fullName>
        <label>Reserve/Guaranty Fund</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIRConditions__c</fullName>
        <label>SIR Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ScopeofFinancing__c</fullName>
        <label>Scope of Financing</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SourceOfFinancing__c</fullName>
        <label>Source Of Financing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preferred Capital Provider</fullName>
                </value>
                <value>
                    <fullName>External Capital Providers</fullName>
                </value>
                <value>
                    <fullName>Right of First Refusal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>